samples/_failures_safe/1761458556_97c612_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d4356981.c: In function ‘main’:
./samples/SAFE/__tmp_d4356981.c:166:5: error: expected expression at end of input
  166 |     add_edge(&g, n1, n2,
      |     ^~~~~~~~
./samples/SAFE/__tmp_d4356981.c:166:5: error: expected declaration or statement at end of input
